--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,10 +10,12 @@ source:
 
 build:
   number: 0
-  skip: true  # [osx or win]
+  noarch: generic
 
 requirements:
   run:
+    - __linux  # [linux]
+    - __win    # [win]
     - cuda-compiler {{ version }}
     - cuda-libraries {{ version }}
     - cuda-libraries-dev {{ version }}
