--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "12.0.0" %}
+{% set version = "12.1.1" %}
 
 package:
   name: cuda-toolkit
@@ -9,7 +9,7 @@ source:
   sha256: 5db25d4fd138013b563f9a3d1d87f7de7df1dac014fd4cccdfbb3435a5cff761
 
 build:
-  number: 1
+  number: 0
   noarch: generic
 
 requirements:
@@ -19,7 +19,7 @@ requirements:
     - cuda-compiler {{ version }}
     - cuda-libraries {{ version }}
     - cuda-libraries-dev {{ version }}
-    - cuda-nvml-dev 12.0.76
+    - cuda-nvml-dev 12.1.105
     - cuda-tools {{ version }}
 
 test:
@@ -38,4 +38,4 @@ about:
 
 extra:
   recipe-maintainers:
-    - adibbley
+    - conda-forge/cuda
